  * Rename gnukfreebsd_cloexec.diff to gnukfreebsd_linker_warnings.diff.
    Add two more places where config tests are currently false positives.
  * Make ${DEB_HOST_GNU_TYPE}-qmake script set QMAKE_QMAKE to itself.
    This is needed for properly building configuration tests.
  * Pass toolchain-related variable assignments as early flags to qmake.
    Switch to default mode after passing them.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 07 Dec 2017 19:16:38 +0300

qtbase-opensource-src (5.10.0+dfsg-2) experimental; urgency=medium

  * Bump qtbase-abi to 5-10-0, as in 5.10 there were removed symbols.
  * Do not attempt to use arc4random_buf() on GNU/kFreeBSD, it is missing
    there (no_arc4random_buf.diff).

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 07 Dec 2017 17:27:40 +0300

qtbase-opensource-src (5.10.0+dfsg-1) experimental; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Merge 5.9.2+dfsg-6 upload from unstable.

  [ Dmitry Shachnev ]
  * New upstream stable release.
  * Update symbols files from buildds’ logs.
  * Update debian/watch to track 5.10.0 official releases.
  * Exclude licheck binaries from the tarball, they have no source.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 07 Dec 2017 11:17:10 +0300

qtbase-opensource-src (5.10.0~rc1+dfsg-1) experimental; urgency=medium

  * New upstream release candidate.
  * Update debian/watch to track 5.10 development releases.
  * Drop qglxconvenience_nullptr.diff, included upstream.
  * Build with OpenSSL 1.1 (closes: #859671).
  * Update install files for the new version.
  * Update symbols files from the current build logs.
  * Update debian/copyright using debian/scripts/update-copyright.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 28 Nov 2017 16:43:35 +0300

qtbase-opensource-src (5.9.2+dfsg-6) unstable; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Make libqt5opengl5-dev provide libqt5opengl5-desktop-dev and not