@@ -261,18 +261,9 @@ endif
 		> debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/qt5/qt.conf
 
 	mkdir -p debian/tmp/usr/bin
-	echo "#!/bin/sh" > debian/tmp/usr/bin/$(DEB_HOST_GNU_TYPE)-qmake
-	echo "exec /usr/lib/qt5/bin/qmake" \
-		"-qtconf /usr/lib/$(DEB_HOST_MULTIARCH)/qt5/qt.conf" \
-		"-early" \
-		'QMAKE_CC=$${CC:-$(DEB_HOST_GNU_TYPE)-gcc}' \
-		'QMAKE_CXX=$${CXX:-$(DEB_HOST_GNU_TYPE)-g++}' \
-		'QMAKE_LINK=$${CXX:-$(DEB_HOST_GNU_TYPE)-g++}' \
-		"QMAKE_QMAKE=/usr/bin/$(DEB_HOST_GNU_TYPE)-qmake" \
-		"PKG_CONFIG=$(DEB_HOST_GNU_TYPE)-pkg-config" \
-		"-before" \
-		'"$$@"' \
-		>> debian/tmp/usr/bin/$(DEB_HOST_GNU_TYPE)-qmake
+	sed -e 's/@DEB_HOST_MULTIARCH@/$(DEB_HOST_MULTIARCH)/g' \
+		-e 's/@DEB_HOST_GNU_TYPE@/$(DEB_HOST_GNU_TYPE)/g' \
+		< debian/qmake-cross-wrapper.in > debian/tmp/usr/bin/$(DEB_HOST_GNU_TYPE)-qmake
 	chmod +x debian/tmp/usr/bin/$(DEB_HOST_GNU_TYPE)-qmake
 
 override_dh_auto_install-indep:
