@@ -7,6 +7,8 @@ qtbase-opensource-src (5.10.0+dfsg-3) UNRELEASED; urgency=medium
     This is needed for properly building configuration tests.
   * Pass toolchain-related variable assignments as early flags to qmake.
     Switch to default mode after passing them.
+  * Support <triplet>-qmake -query something (closes: #886542). Thanks to
+    Helmut Grohne.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 07 Dec 2017 19:16:38 +0300
 
